--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,14 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.cart-item {
+  display: inline-flex;
+  margin: 0 30px;
+}
+.right-block {
+  padding: 0 40px;
+}
+.cart-item-actions {
+  margin-top: 20px;
+}
