--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,17 @@ body {
   display: flex;
   flex-direction: column;
 }
+
+.navbar {
+  background-color: rgb(161, 164, 165);
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 30px;
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+.count {
+  position: relative;
+  top: -10px;
+  left: 2px;
+}
